Lekce 02 skoro hotova

--- a/02-numbers/lekce02-numbers.tex
+++ b/02-numbers/lekce02-numbers.tex
@@ -318,10 +318,10 @@ Potřebujeme zakódovat znaménko do reprezentace čísla:
 \end{itemize}
 \item dvojkový doplněk -- two complement
 \begin{itemize}
-\item reprezentace x k-bitovým číslem je vlastně $x$ \texttt{mod} $2^k$
+\item reprezentace x k-bitovým číslem je vlastně $X$ \texttt{mod} $2^k$
 \begin{itemize}
-\item pro $x\ge0$ je reprezentace $x$
-\item pro $x<0$ je reprezentace $2^k-|x|$
+\item pro $X\ge0$ je reprezentace $X$
+\item pro $X<0$ je reprezentace $2^k-|X|$
 \end{itemize}
 \item výhoda: sčítání funguje tak, jak jsme si ho navrhli pro všechna čísla, kladná i záporná.
 \end{itemize}
@@ -416,7 +416,17 @@ Odčítání lze řešit:
 \frametitle{Násobení a dělení}
 
 \begin{itemize}
-\item pro násobení lze odvodit, že pokud bychom ignorovali znaménko a spočítali A*B, pak musíme výsledek upravit ...
+\item pro násobení lze odvodit, že pokud bychom ignorovali znaménko a spočítali $M\cdot N$, pak pro $M$,$N$ obě k-bitová čísla musíme výsledek upravit takto:
+\end{itemize}
+$A(M\cdot N) = A(M) \cdot A(N)$\\
+\phantom{$A(M\cdot N)$ }$-A(M) \cdot 2^k$ \phantom{xxxxx} pokud $M<0$\\
+\phantom{$A(M\cdot N)$ }$-A(N) \cdot 2^k$ \phantom{xxxxx} pokud $N<0$
+\begin{itemize}
+\begin{itemize}
+\item protože reprezentace záporného čísla dvojkovým doplňkem je vlastně $A(M) = 2^k+M$, pak součin dvou záporných čísel je $(2^k+M)\cdot (2^k+N) = 2^{2\cdot k}+2^k \cdot M + 2^k \cdot N + M \cdot N$
+\end{itemize}
+\end{itemize}
+\begin{itemize}
 \item moderní násobení a dělení počítá s absolutními hodntami a nakonec určíme znaménko výsledku podle znaménka operandů.
 \begin{itemize}
 \item nejvyšší bit značí znaménko
@@ -489,7 +499,7 @@ Pokud se podíváme co se stalo, unsigned char je 8-bitová reprezentace čísel
 
 Protože se výsledek nevejde do 8-bitů, nejvyšší jednička se ztratí a výsledek je pouze 14.
 
-Pokud to chcete detekovat, máte následující možnosti:
+Pokud přetečení chcete detekovat, máte následující možnosti:
 \begin{itemize}
 \item C23 bool ckd\_add(type1 *result, type2 a, type3 b) -- součet dvou čísel s detekcí přetečení
 \item GNU GCC 5+, Clang 3.8+ \_\_builtin\_add\_overflow(a, b, result) -- obě verze i pro sub a mul
@@ -624,7 +634,7 @@ Doplněk jedné:
 \end{itemize}
 \item nevýhody: dvě reprezentace 0, složitější sčítání čísel se znaménky
 \end{itemize}
-
+\bigskip
 BCD formát
 \begin{itemize}
 \item jiná reprezentace celých čísel, každá cifra jeden nibble 
@@ -674,7 +684,7 @@ BCD formát
 Speciální případ:
 \begin{itemize}
 \item pokud chcete reprezentovat reálná čísla z intervalu $<0,1)$
-\item pak můžete nastavit $s=k$
+\item pak můžete nastavit $s=k$ a použí bezznaménkovou reprezentaci celých čísel
 \item dosáhnete lepší přesnosti než odpovídající \texttt{float}, nebo \texttt{double}
 \end{itemize}
 
@@ -691,11 +701,11 @@ Počítání s čísly s pevnou destinnou čárkou:
 \item součet a rozdíl je součem a rozdílem celočíselné reprezentace čísel
 \item násobení je složitější:
 \begin{itemize}
-\item $A(X \cdot Y) = (X \cdot Y ) \cdot 2^s = \frac{(X \cdot 2^s)\cdot( Y\cdot 2^s) }{2^s} = \frac{A(X) \cdot A(Y)}{2^k}$
+\item $A(X \cdot Y) = (X \cdot Y ) \cdot 2^s = \frac{(X \cdot 2^s)\cdot( Y\cdot 2^s) }{2^s} = \frac{A(X) \cdot A(Y)}{2^s}$
 \end{itemize}
 \item dělení je obdobné:
 \begin{itemize}
-\item $A(\frac{X}{Y}) = (\frac{X}{Y}) \cdot 2^s = \frac{(X \cdot 2^s)\cdot2^s }{( Y\cdot 2^s)} = \frac{A(X) \cdot 2^k}{A(Y)}$
+\item $A(\frac{X}{Y}) = (\frac{X}{Y}) \cdot 2^s = \frac{(X \cdot 2^s)\cdot2^s }{( Y\cdot 2^s)} = \frac{A(X) \cdot 2^s}{A(Y)}$
 \end{itemize}
 \item Nejedná se o výrazné zesložitění, protože násobení číslem $2^s$ je posun o s bitů doleva a dělení číslem $2^s$ je posun o s bitů doprava.
 \end{itemize}
@@ -713,14 +723,14 @@ Plovoucí desetinná čárka (floating point numbers)
 \bigskip
 
 Obdoba vědeckého zápisu reálných čísel:
-$-123 000 000 000 000.0 = -1.23 \cdot 10^{14} = -1.23E 14$\\
-$0.000 000 000 000 123 = -1.23 \cdot 10^{-13} = -1.23E-13$\\
+$-123 000 000 000 000.0 = -1.23 \cdot 10^{14} = -1.23\text{E} 14$\\
+$0.000 000 000 000 123 = -1.23 \cdot 10^{-13} = -1.23\text{E}-13$\\
 
 \bigskip
 
 Binární reprezentace používá obdobně mocninu 2:\\
-$110 1100 0000 0000.0 = 1.1011 \cdot 2^{14} = 1.1011E 14 = 29696_{10}$\\
-$-0.0000 0000 0000 0001 1101 = -1.1101 \cdot 2^{-16} = -1.1101E-16 \approx$\\
+$110 1100 0000 0000.0 = 1.1011 \cdot 2^{14} = 1.1011\text{E} 14 = 29696_{10}$\\
+$-0.0000 0000 0000 0001 1101 = -1.1101 \cdot 2^{-16} = -1.1101\text{E}-16 \approx$\\
 \phantom{xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx}$\approx0.00002765_{10}$\\
 
 \bigskip
@@ -733,30 +743,21 @@ Všiměte si, že každé reálné číslo (kromě 0) začíná v binárním vě
 \begin{frame}
 \frametitle{IEEE-754}
 
-Základní definice znaménko exponent mantisa (skrytá jednička) 
-\end{frame}
+Standard IEEE-754 definuje, jakým způsobem zakódovat reálné číslo do 32, 64 bitů.
 
-
-\begin{frame}
-\frametitle{IEEE-754}
-
-Normalizované, denormalizované čísla
-
-Nekonečna a NaN
-\end{frame}
-
-\begin{frame}
-\frametitle{IEEE-754}
-
-Porovnání dvou reálných čísel
-
-\end{frame}
-
-
-\begin{frame}
-\frametitle{IEEE-754}
-
-Sčítání dvou reálných čísel
+Reálné 32-bitové čsílo obsahuje:
+\begin{itemize}
+\item 1 bit znaménko (pozn. exituje 0 i -0)
+\item 8 bit hodnota exponentu s posunutou nulou o 127
+\item 23 bitů hodnota mantisy, tedy cifer reprezentujících hodnotu
+\end{itemize}
+\bigskip
+Reálné 64-bitové čsílo obsahuje:
+\begin{itemize}
+\item 1 bit znaménko (pozn. exituje 0 i -0)
+\item 11 bitů hodnota exponentu s posunutou nulou o 1023
+\item 23 bitů hodnota mantisy, tedy cifer reprezentujících hodnotu
+\end{itemize}
 
 \end{frame}
 
@@ -764,16 +765,185 @@ Sčítání dvou reálných čísel
 \begin{frame}
 \frametitle{IEEE-754}
 
-Sčítání dvou reálných čísel
+Příklad:
+Reálné číslo $0.828125_{(10)} = 0.5+0.25+0.0625+0.015625=2^{-1}+2^{-2}+2^{-4}+2^{-6} = 0.110101_{(2)}$.\\
+Číslo převedeme do vědecké notace: $0.110101 = 1.10101\text{E}-1$.\\
+Exponent $e=-1$, reprezentace s posunutou nulou o 127 je $A(-1)=-1+127 = 126$.\\
+Abychom neplýtvali zbytečně bity, pro normalizovaná čísla se první 1 mantisy neukládá do binární reprezentace čísla:
+
+\begin{center}
+\includegraphics[width=0.5\textwidth]{float_priklad.pdf}
+\end{center}
 
 \end{frame}
 
 \begin{frame}
 \frametitle{IEEE-754}
 
-Násobení dvou reálných čísel
+Normalizované číslo, je každé číslo, které lze zapsat jako \texttt{1.XXXXX E exp}, kde exp je číslo od -126 do 127, tedy jehož reprezentace je od 1 do 254.
+
+\bigskip
+Denormalizovaná čísla jsou čísla, která lze zapsat jako \texttt{0.XXXXX E -126}, tedy například 0.0, nebo všechna čísla v intervalu $(-1.17549\text{E}-38,1.17549\text{E}-38)$, tedy od $(-2^{-126},2^{-126})$.
+
+\bigskip
+Pokud je reprezentace exponentu nastavena na samé 1, tedy 255, tzn. hodnota exponentu je 128, pak se jedná o speciální čísla. 
+\begin{itemize}
+\item pokud je mantisa 0, pak se jedná o nekonečno, podle znaménka \textit{-inf}, nebo \textit{inf}.
+\item pokud je mantisa nenulová, pak se jedná o speciální výraz \textit{NaN} -- Not a Number, tedy chybná hodnota čísla, například po výpočtu odmocniny záporného čísla 
+\end{itemize}
+\end{frame}
+
+\begin{frame}[shrink=5]
+\frametitle{IEEE-754}
+
+Přehled reálných čísel:
+\begin{tabular}{|c|c|l|}\hline
+Exponent & Mantisa &  Hodnota \\ \hline
+00000000 & 0 &  0.0 čistá nula \\ \hline
+00000000 & nenulová &  Denormalizovaná čísla blízká 0 \\ \hline
+00000001 & 0 &  nejmenší normalizované číslo se skrytou 1 v mantise \\ \hline
+\smallmezi 1 a 255 & cokoliv &  nromalizovaná čísla \\ \hline
+11111111 & 0 &  nekonečno \\ \hline
+11111111 & nenulová &  NaN chybná hodnota \\ \hline
+\end{tabular}
+\bigskip
+
+Denormalizované číslo s nejmenší absolutní hodnotou různé od 0 je:
+\begin{itemize}
+\item \small exponent = 0 (-126), mantisa=000...0001, hodnota = $2^{-23+(-126)} \approx 1.4\text{E}-45$
+\end{itemize}
+Normalizované číslo s nejmenší absolutní hodnotou:
+\begin{itemize}
+\item \small exponent = 1 (-126), mantisa=000...0000, hodnota = $2^{-126} \approx 1.17\text{E}-38$
+\end{itemize}
+Normalizované číslo s největší absolutní hodnotou:
+\begin{itemize}
+\item \small exponent = 255 (127), mantisa=111...1111, hodnota = $(2-2^{-23})2^{127} \approx 3.4\text{E}38$
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{IEEE-754 revize 2008 }
+
+Standard IEEE-754 navíc definuje reálné číslo s 16 bity (half precision) a s 128 bity (quad precision).
+
+Reálné 16-bitové čsílo obsahuje:
+\begin{itemize}
+\item 1 bit znaménko 
+\item 5 bitů hodnota exponentu s posunutou nulou o 15
+\item 10 bitů hodnota mantisy, (plus 11tý bit skrytý neukládaný)
+\end{itemize}
+\bigskip
+Reálné 128-bitové čsílo obsahuje:
+\begin{itemize}
+\item 1 bit znaménko 
+\item 15 bitů hodnota exponentu s posunutou nulou o 16383
+\item 112 bitů hodnota mantisy, (plus 113 bit skrytý)
+\end{itemize}
 
 \end{frame}
+
+
+\begin{frame}
+\frametitle{IEEE-754 }
+
+Porovnání reálných čísel na velikost:
+\begin{itemize}
+\item Kladná čísla jsou vždy větší než záporná
+\item Po odstranění znamének, lze absolutní hodnoty čísel porovnat tak, jak jsou uložené v paměti jako celé číslo bez znaménka
+\begin{itemize}
+\item To je možné díky zvolené reprezentaci exponentu jako čísla s posunutou nulou
+\item Větší expoenent větší číslo, při rovnosti exponentů větší mantisa znamená větší číslo
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{IEEE-754}
+
+Sčítání nebo odčítání dvou reálných čísel ve vědecké notaci
+\begin{enumerate}
+\item Převést mantisy čísel na společný exponent, který má hodnotu největšího expoenentu (porušíme notaci)
+\item Provést součet, nebo rozdíl mantis i se skrytými jedničkami
+\item Výsledné číslo normalizovat
+\begin{itemize}
+\item při sčítání se může exponent zvětšit
+\item při odčítání se exponent může zmenšit
+\end{itemize}
+\end{itemize}
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{IEEE-754}
+
+Příklad: Sčítání dvou reálných čísel 31.5+0.75
+
+$31.5_{(10)} = 11111.1_{(2)} = 1.11111\text{E}4$ \phantom{xxx} $0.75_{(10)} = 0.11_{(2)} = 1.1\text{E}-1$
+
+\bigskip
+Obě čísla převedeme na stejný exponent 4 a sečteme:\\
+\texttt{\phantom{xx}1.11111}\\
+\texttt{\phantom{xx}0.000011}\vspace{-6pt}\\
+\rule[0pt]{2cm}{0.4pt}\\
+\texttt{\phantom{x}10.000001}\\
+
+Výsledné číslo musíme znormalizovat zvýšením exponentu na 5 a tím posunutím desetinné čárky vlevo:\\
+$10.000001\text{E}4 = 1.0000001\text{E}5$\\
+
+Toto číslo je reprezentací čísla 32.25.
+
+\end{frame}
+
+\begin{frame}
+\frametitle{IEEE-754 -- Násobení}
+
+Násobení dvou reálných čísel:
+\begin{enumerate}
+\item Exponent výsledku je součet expoenetů čísel
+\item Mantisa výsledku je součin mantis čísel (i se skrytými jedničkami)
+\item Výsledné číslo normalizovat
+\begin{itemize}
+\item podle výsledku násobění mantis je někdy nutné zvýšit exponent o 1 a vyrotovat mantisu doprava
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{IEEE-754 -- Násobení}
+
+Příklad: Vynásobíme čísla $0.375 \cdot 1.5$
+
+$0.375_{(10)} = 0.011_{(2)} = 1.1\text{E}-2$ \phantom{xxx} $1.5_{(10)} = 1.1_{(2)} = 1.1\text{E}0$
+
+Součin mantis je:\\
+\texttt{\phantom{xxx}11} odpovídá \texttt{1.1}\\
+\texttt{\phantom{xxx}11} odpovídá \texttt{1.1}\vspace{-6pt}\\
+\rule[0pt]{2cm}{0.4pt}\\
+\texttt{\phantom{xxx}11}\\
+\texttt{\phantom{xx}11}\vspace{-6pt}\\
+\rule[0pt]{2cm}{0.4pt}\\
+\texttt{\phantom{x}1001} odpovídá \texttt{10.01} protože výsledek má dvě desetinná čísla
+
+Exponent vychází $-2+0=-2$, ale výsledek součinu mantis potřebujeme normalizovat, neboli zvětšit exponent o 1 na $-1$.
+
+Tím dostáváme výsledek $10.01\text{E}-2 = 1.001\text{E}-1$ což je správný výsledek $0.5625_{(10)}$
+
+\end{frame}
+
+\begin{frame}
+\frametitle{IEEE-754}
+
+Reálná čísla shrnutí:
+\begin{itemize}
+\item 
+\end{itemize}
+
+\end{frame}
+
 
 \begin{frame}
 \frametitle{Bonusový bod}
@@ -781,8 +951,6 @@ Násobení dvou reálných čísel
 Kvíz s bonusovou otázkou za tuto hodinu.
 
 \end{frame}
-
-
 
 
 \end{document}
