Lekce 02 typos and beta ready

--- a/02-numbers/lekce02-numbers.tex
+++ b/02-numbers/lekce02-numbers.tex
@@ -29,7 +29,7 @@ Dnes:
 \item Rozsahy celých čísel a ukládání do paměti
 \item Násobení a dělení celých kladných čísel 
 \item Reprezentace záporných čísel a operace s nimi
-\item Přetečení sčítání a odčístání
+\item Přetečení sčítání a odčítání
 \item Reálná čísla
 \end{itemize}
 
@@ -94,7 +94,7 @@ adresa & Big-endian & Little-endian \\ \hline
 \begin{itemize}
 \item Procesory Intel zavedly little-endian, procesory Motorola zavedly big-endian.
 \item Je to důležité, když získáte například přes internet data po bajtech, musíte definovat, jaká čísla reprezentují
-\item RISC V - jsou little-endian, MIPS - big-endian
+\item RISC V - little-endian, MIPS - big-endian
 \item Bitcoin - DER signatures big-endian, transaction hash little-endian
 \end{itemize}
 \end{frame}
@@ -130,11 +130,11 @@ Stejný princip násobení, jak jste se ho naučili na základní škole pro des
 \texttt{\phantom{xxx}153}\\
 \texttt{\phantom{xxx}*45}\\
 \vspace{-8pt}
-\rule[0]{1.5cm}{0.1pt}\\
+\rule[0pt]{1.5cm}{0.1pt}\\
 \texttt{\phantom{xxx}765}\\
 \texttt{\phantom{xx}612 }\\
 \vspace{-8pt}
-\rule[0]{1.5cm}{0.1pt}\\
+\rule[0pt]{1.5cm}{0.1pt}\\
 \texttt{\phantom{xx}6885}\\
 \end{column}
 \hfill
@@ -142,7 +142,7 @@ Stejný princip násobení, jak jste se ho naučili na základní škole pro des
 \texttt{\phantom{xxxxxx}10011001}\\
 \texttt{\phantom{xxxxxxx}*101101}\\
 \vspace{-8pt}
-\rule[0]{3cm}{0.4pt}\\
+\rule[0pt]{3cm}{0.4pt}\\
 \texttt{\phantom{xxxxxx}10011001}\\
 \texttt{\phantom{xxxxx}00000000}\\
 \texttt{\phantom{xxxx}10011001}\\
@@ -150,7 +150,7 @@ Stejný princip násobení, jak jste se ho naučili na základní škole pro des
 \texttt{\phantom{xx}00000000}\\
 \texttt{\phantom{x}10011001}\\
 \vspace{-8pt}
-\rule[0]{3cm}{0.4pt}\\
+\rule[0pt]{3cm}{0.4pt}\\
 \texttt{\phantom{x}1101011100101}\\
 \end{column}
 \end{columns}
@@ -228,8 +228,8 @@ Když se podíváme jen na prostřední nejdelší sloupec:
 \begin{itemize}
 \item Vydíme, že za 8 kroků sčítaček, tedy 16 zpoždění hradel nám zbývá sečíst dva bity
 \item Vpravo od tohoto sloupce je již vše sečteno a již se i propagovali všechny carry
-\item Zbývá sečíct dvě 64-bitová čísla (součty a carry), což se dá stihnout také za 16 zpoždění hradel
-\item Výsledek - vynásobíme dvě čísla za cenu doby odpovídajícíc dvou součtům
+\item Zbývá sečíst dvě 64-bitová čísla (součty a carry), což se dá stihnout také za 16 zpoždění hradel
+\item Výsledek - vynásobíme dvě čísla za cenu doby odpovídající dvou součtům
 \end{itemize}
 
 \end{frame}
@@ -245,11 +245,11 @@ Dělení lze zkonstruovat podobně, jako jste se učili na základní škole:
 \texttt{\phantom{-}240:11=21}\\
 \texttt{-22}\\
 \vspace{-8pt}
-\rule[0]{1cm}{0.1pt}\\
+\rule[0pt]{1cm}{0.1pt}\\
 \texttt{\phantom{xx}20}\\
 \texttt{\phantom{x}-11}\\
 \vspace{-8pt}
-\rule[0]{1cm}{0.1pt}\\
+\rule[0pt]{1cm}{0.1pt}\\
 \texttt{\phantom{xxx}9}\\
 \end{column}
 \hfill
@@ -257,17 +257,17 @@ Dělení lze zkonstruovat podobně, jako jste se učili na základní škole:
 \texttt{\phantom{x}11110000:1011=10101}\\
 \texttt{-1011}\\
 \vspace{-8pt}
-\rule[0]{1cm}{0.4pt}\\
+\rule[0pt]{1cm}{0.4pt}\\
 \texttt{\phantom{xx}1000}\\
 \texttt{\phantom{xx}10000}\\
 \texttt{\phantom{xx}-1011}\\
 \vspace{-8pt}
-\rule[0]{1.4cm}{0.4pt}\\
+\rule[0pt]{1.4cm}{0.4pt}\\
 \texttt{\phantom{xxxx}1010}\\
 \texttt{\phantom{xxxx}10100}\\
 \texttt{\phantom{xxxx}-1011}\\
 \vspace{-8pt}
-\rule[0]{1.8cm}{0.4pt}\\
+\rule[0pt]{1.8cm}{0.4pt}\\
 \texttt{\phantom{xxxxx}1001}\\
 \end{column}
 \end{columns}
@@ -318,7 +318,7 @@ Potřebujeme zakódovat znaménko do reprezentace čísla:
 \end{itemize}
 \item dvojkový doplněk -- two complement
 \begin{itemize}
-\item reprezentace x k-bitovým číslem je vlastně $X$ \texttt{mod} $2^k$
+\item reprezentace $X$ k-bitovým číslem je vlastně $X$ \texttt{mod} $2^k$
 \begin{itemize}
 \item pro $X\ge0$ je reprezentace $X$
 \item pro $X<0$ je reprezentace $2^k-|X|$
@@ -412,6 +412,7 @@ Odčítání lze řešit:
 
 \end{frame}
 
+
 \begin{frame}
 \frametitle{Násobení a dělení}
 
@@ -427,7 +428,7 @@ $A(M\cdot N) = A(M) \cdot A(N)$\\
 \end{itemize}
 \end{itemize}
 \begin{itemize}
-\item moderní násobení a dělení počítá s absolutními hodntami a nakonec určíme znaménko výsledku podle znaménka operandů.
+\item moderní násobení a dělení počítá s absolutními hodnotami a nakonec určíme znaménko výsledku podle znaménka operandů.
 \begin{itemize}
 \item nejvyšší bit značí znaménko
 \item výpočet opačného čísla je rychlý a levný
@@ -546,7 +547,7 @@ Přetečení při sčítání čísel se znaménkem je složitější. Co je dob
 \end{column}
 \end{columns}
 \bigskip
-Přetečení při sčítání čísel se znaménkem nastane právě tehdy, když dojde k přenosu na posledních sifrách a zároveň nedojde k přenosu na předposledních cifrách.
+Přetečení při sčítání čísel se znaménkem nastane právě tehdy, když dojde k přenosu na posledních cifrách a zároveň nedojde k přenosu na předposledních cifrách.
 
 \end{frame}
 
@@ -554,13 +555,13 @@ Přetečení při sčítání čísel se znaménkem nastane právě tehdy, když
 \begin{frame}
 \frametitle{Jiné reprezentace záporných čísel}
 
-Čísla s posunutou nuou:
+Čísla s posunutou nulou:
 
 \begin{columns}
 \begin{column}{0.5\textwidth}
 \begin{itemize}
-\item pro k-bitouvou reprezentaci zvolíme číslo S (většinou $S=2^{k-1}$ nebo $S=2^{k-1}-1$)
-\item reprezetace -- kód čísla X je $A(X) = X+S$
+\item pro k-bitovou reprezentaci zvolíme číslo S (většinou $S=2^{k-1}$ nebo $S=2^{k-1}-1$)
+\item reprezentace -- kód čísla X je $A(X) = X+S$
 \item rozkódování je funkcí $D(A) = A-S$
 \item rozsah čísel reprezentovaných je $<-S, 2^{k}-S-1>$
 \end{itemize}
@@ -614,9 +615,9 @@ Pro k=8 a S=127
 
 Při sčítání dvou čísel s odlišnými znaménky (výsledek je stejná reprezentace čísla se znaménkem):
 \begin{itemize}
-\item[A] může dojít k přetečení jen v dvokovém doplňku
+\item[A] může dojít k přetečení jen v dvojkovém doplňku
 \item[B] může dojít k přetečení jen v reprezentaci s posunutou nulou
-\item[C] může dojít k přetečení v dvokovém doplňku i v reprezentaci s pousunutou nulou
+\item[C] může dojít k přetečení v dvojkovém doplňku i v reprezentaci s posunutou nulou
 \item[D] nemůže dojít v žádné reprezentaci čísel se znaménkem
 \end{itemize}
 \end{frame}
@@ -668,14 +669,14 @@ BCD formát
 
 
 \begin{frame}
-\frametitle{Reálná čísla}
+\frametitle{Reálná čísla s pevnou desetinnou čárkou}
 
-Čísla s pevnou destinnou čárkou (fixed point numbers):
+Čísla s pevnou desetinnou čárkou (fixed point numbers):
 
 \begin{itemize}
 \item obdoba čísel s posunutou 0
 \item reálné číslo je reprezentované k-bitovým celým číslem se znaménkem, dále zvolíme pevný počet desetinných míst s bitů, kdy $0 \le s \le k$
-\item reprezetace -- kód čísla X je $A(X) = \lceil X \cdot 2^s \rceil$
+\item reprezentace -- kód čísla X je $A(X) = \lceil X \cdot 2^s \rceil$
 \item rozkódování je funkcí $D(A) = \frac{A}{2^s}$
 \item rozsah čísel reprezentovaných je $<-\frac{2^{k-1}}{2^s}, \frac{2^{k-1}-1}{2^s}>$
 \item přesnost reprezentace čísel je $\pm \frac{1}{2^s}$.
@@ -684,7 +685,7 @@ BCD formát
 Speciální případ:
 \begin{itemize}
 \item pokud chcete reprezentovat reálná čísla z intervalu $<0,1)$
-\item pak můžete nastavit $s=k$ a použí bezznaménkovou reprezentaci celých čísel
+\item pak můžete nastavit $s=k$ a použít bezznaménkovou reprezentaci celých čísel
 \item dosáhnete lepší přesnosti než odpovídající \texttt{float}, nebo \texttt{double}
 \end{itemize}
 
@@ -693,12 +694,12 @@ Některé SIMD instrukce používají pevnou desetinnou čárku.
 \end{frame}
 
 \begin{frame}
-\frametitle{Reálná čísla}
+\frametitle{Reálná čísla s pevnou desetinnou čárkou}
 
-Počítání s čísly s pevnou destinnou čárkou:
+Počítání s čísly s pevnou desetinnou čárkou:
 
 \begin{itemize}
-\item součet a rozdíl je součem a rozdílem celočíselné reprezentace čísel
+\item součet a rozdíl je součtem a rozdílem celočíselné reprezentace čísel
 \item násobení je složitější:
 \begin{itemize}
 \item $A(X \cdot Y) = (X \cdot Y ) \cdot 2^s = \frac{(X \cdot 2^s)\cdot( Y\cdot 2^s) }{2^s} = \frac{A(X) \cdot A(Y)}{2^s}$
@@ -735,7 +736,7 @@ $-0.0000 0000 0000 0001 1101 = -1.1101 \cdot 2^{-16} = -1.1101\text{E}-16 \appro
 
 \bigskip
 
-Všiměte si, že každé reálné číslo (kromě 0) začíná v binárním vědeckém zápisu jedničkou.
+Všimněte si, že každé reálné číslo (kromě 0) začíná v binárním vědeckém zápisu jedničkou.
 
 
 \end{frame}
@@ -745,16 +746,16 @@ Všiměte si, že každé reálné číslo (kromě 0) začíná v binárním vě
 
 Standard IEEE-754 definuje, jakým způsobem zakódovat reálné číslo do 32, 64 bitů.
 
-Reálné 32-bitové čsílo obsahuje:
+Reálné 32-bitové číslo obsahuje:
 \begin{itemize}
-\item 1 bit znaménko (pozn. exituje 0 i -0)
+\item 1 bit znaménko (pozn. existuje 0 i -0)
 \item 8 bit hodnota exponentu s posunutou nulou o 127
 \item 23 bitů hodnota mantisy, tedy cifer reprezentujících hodnotu
 \end{itemize}
 \bigskip
-Reálné 64-bitové čsílo obsahuje:
+Reálné 64-bitové číslo obsahuje:
 \begin{itemize}
-\item 1 bit znaménko (pozn. exituje 0 i -0)
+\item 1 bit znaménko (pozn. existuje 0 i -0)
 \item 11 bitů hodnota exponentu s posunutou nulou o 1023
 \item 23 bitů hodnota mantisy, tedy cifer reprezentujících hodnotu
 \end{itemize}
@@ -772,9 +773,10 @@ Exponent $e=-1$, reprezentace s posunutou nulou o 127 je $A(-1)=-1+127 = 126$.\\
 Abychom neplýtvali zbytečně bity, pro normalizovaná čísla se první 1 mantisy neukládá do binární reprezentace čísla:
 
 \begin{center}
-\includegraphics[width=0.5\textwidth]{float_priklad.pdf}
+\includegraphics[width=0.4\textwidth]{float_priklad.pdf}
 \end{center}
 
+Zkuste si \url{https://www.h-schmidt.net/FloatConverter/IEEE754.html}
 \end{frame}
 
 \begin{frame}
@@ -799,10 +801,10 @@ Pokud je reprezentace exponentu nastavena na samé 1, tedy 255, tzn. hodnota exp
 Přehled reálných čísel:
 \begin{tabular}{|c|c|l|}\hline
 Exponent & Mantisa &  Hodnota \\ \hline
-00000000 & 0 &  0.0 čistá nula \\ \hline
+00000000 & 0 &  0.0 -- čistá nula \\ \hline
 00000000 & nenulová &  Denormalizovaná čísla blízká 0 \\ \hline
 00000001 & 0 &  nejmenší normalizované číslo se skrytou 1 v mantise \\ \hline
-\smallmezi 1 a 255 & cokoliv &  nromalizovaná čísla \\ \hline
+\small 1 až 254 & cokoliv &  normalizovaná čísla, skrytá 1 v mantise \\ \hline
 11111111 & 0 &  nekonečno \\ \hline
 11111111 & nenulová &  NaN chybná hodnota \\ \hline
 \end{tabular}
@@ -828,14 +830,14 @@ Normalizované číslo s největší absolutní hodnotou:
 
 Standard IEEE-754 navíc definuje reálné číslo s 16 bity (half precision) a s 128 bity (quad precision).
 
-Reálné 16-bitové čsílo obsahuje:
+Reálné 16-bitové číslo obsahuje:
 \begin{itemize}
 \item 1 bit znaménko 
 \item 5 bitů hodnota exponentu s posunutou nulou o 15
 \item 10 bitů hodnota mantisy, (plus 11tý bit skrytý neukládaný)
 \end{itemize}
 \bigskip
-Reálné 128-bitové čsílo obsahuje:
+Reálné 128-bitové číslo obsahuje:
 \begin{itemize}
 \item 1 bit znaménko 
 \item 15 bitů hodnota exponentu s posunutou nulou o 16383
@@ -854,7 +856,7 @@ Porovnání reálných čísel na velikost:
 \item Po odstranění znamének, lze absolutní hodnoty čísel porovnat tak, jak jsou uložené v paměti jako celé číslo bez znaménka
 \begin{itemize}
 \item To je možné díky zvolené reprezentaci exponentu jako čísla s posunutou nulou
-\item Větší expoenent větší číslo, při rovnosti exponentů větší mantisa znamená větší číslo
+\item Větší exponent větší číslo, při rovnosti exponentů větší mantisa znamená větší číslo
 \end{itemize}
 \end{itemize}
 \end{frame}
@@ -865,14 +867,14 @@ Porovnání reálných čísel na velikost:
 
 Sčítání nebo odčítání dvou reálných čísel ve vědecké notaci
 \begin{enumerate}
-\item Převést mantisy čísel na společný exponent, který má hodnotu největšího expoenentu (porušíme notaci)
+\item Převést mantisy čísel na společný exponent, který má hodnotu největšího exponentu (porušíme notaci)
 \item Provést součet, nebo rozdíl mantis i se skrytými jedničkami
 \item Výsledné číslo normalizovat
 \begin{itemize}
 \item při sčítání se může exponent zvětšit
 \item při odčítání se exponent může zmenšit
 \end{itemize}
-\end{itemize}
+\end{enumerate}
 
 \end{frame}
 
@@ -903,13 +905,13 @@ Toto číslo je reprezentací čísla 32.25.
 
 Násobení dvou reálných čísel:
 \begin{enumerate}
-\item Exponent výsledku je součet expoenetů čísel
+\item Exponent výsledku je součet exponentů čísel
 \item Mantisa výsledku je součin mantis čísel (i se skrytými jedničkami)
 \item Výsledné číslo normalizovat
 \begin{itemize}
-\item podle výsledku násobění mantis je někdy nutné zvýšit exponent o 1 a vyrotovat mantisu doprava
+\item podle výsledku násobení mantis je někdy nutné zvýšit exponent o 1 a vyrotovat mantisu doprava
 \end{itemize}
-\end{itemize}
+\end{enumerate}
 \end{frame}
 
 \begin{frame}
@@ -921,7 +923,7 @@ $0.375_{(10)} = 0.011_{(2)} = 1.1\text{E}-2$ \phantom{xxx} $1.5_{(10)} = 1.1_{(2
 
 Součin mantis je:\\
 \texttt{\phantom{xxx}11} odpovídá \texttt{1.1}\\
-\texttt{\phantom{xxx}11} odpovídá \texttt{1.1}\vspace{-6pt}\\
+\texttt{\phantom{xx}*11} odpovídá \texttt{1.1}\vspace{-6pt}\\
 \rule[0pt]{2cm}{0.4pt}\\
 \texttt{\phantom{xxx}11}\\
 \texttt{\phantom{xx}11}\vspace{-6pt}\\
@@ -934,14 +936,30 @@ Tím dostáváme výsledek $10.01\text{E}-2 = 1.001\text{E}-1$ což je správný
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}[fragile]
 \frametitle{IEEE-754}
 
 Reálná čísla shrnutí:
 \begin{itemize}
-\item 
+\item reálná čísla s plovoucí čárkou umí reprezentovat čísla ve velmi velkém rozsahu:
+\begin{itemize}
+\item float -- absolutní hodnota čísel od $1.175494351\text{E}-38$ do $3.402823466\text{E} + 38$
+\item double -- absolutní hodnota čísel od $2.2250738585072014\text{E} - 308$ do $1.7976931348623158\text{E} + 308$
+\end{itemize}
+\item přesnost čísla se udává na počet validních cifer:
+\begin{itemize}
+\item float -- v desítkové soustavě 6-7 platných cifer
+\item double -- v desítkové soustavě 15-16 platných cifer
+\end{itemize}
 \end{itemize}
 
+POZOR: Následující \texttt{while} cyklus neskončí:
+\begin{minted}{c}
+  float a=1.0, step=5e-8;
+  while (a*a<1.01) {
+    a+=step;
+  }
+\end{minted}
 \end{frame}
 
 
